# IG1

IGProjects_x64_VS2022/: .gitignore  CMakeLists.txt  autores.txt  meson.build
IGProjects_x64_VS2022/IG1App/: Box.cpp  Box.h  BoxOutline.cpp  BoxOutline.h  Camera.cpp  Camera.h  ColorMaterialEntity.cpp  ColorMaterialEntity.h  CompoundEntity.cpp  CompoundEntity.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  Debug.h  Disk.cpp  Disk.h  Droid.cpp  Droid.h  Entity.cpp  Entity.h  EntityWithMaterial.cpp  EntityWithMaterial.h  EntityWithTexture.cpp  EntityWithTexture.h  GlassParapet.cpp  GlassParapet.h  Grass.cpp  Grass.h  Ground.cpp  Ground.h  IG1App.cpp  IG1App.h  IG1App.vcxproj  IG1App.vcxproj.filters  IndexMesh.cpp  IndexMesh.h  IndexedBox.cpp  IndexedBox.h  Light.cpp  (+52 more)
IGProjects_x64_VS2022/IG1App/x64/Debug/: light.obj.enc
IGProjects_x64_VS2022/assets/shaders/: simple_gouraud_fragment.glsl  simple_gouraud_vertex.glsl  texture_vertex.glsl  vcolors_vertex.glsl
IGProjects_x64_VS2022/cbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
IGProjects_x64_VS2022/util/: Entrega.cs  manifest.xml
